--- a/style.css
+++ b/style.css
@@ -35,9 +35,9 @@ No media query for `xs` since this is the default in Bootstrap */
   }
 
 body{
-    background-color: black;
+    background-color: #000000;
    /* color: whitesmoke; */
-   color:white;
+   color:#ffffff
 }
 
 /******** Background layers *********/
@@ -69,7 +69,7 @@ body{
     width: 100%;
     height: 100%;
     object-fit: cover;
-    opacity: 0.8;
+    opacity: 1;
     z-index: 5;
 }
 
@@ -92,7 +92,7 @@ body{
     height: 100%;
     object-fit: cover;
     background-color: black;
-    opacity: 0.6;
+    opacity: 0;
     z-index: 6;
 }
 
@@ -180,7 +180,7 @@ body{
     color: whitesmoke;
 }
 .logo a:hover{
-    color: dimgray;
+    color: rgb(49, 49, 49);
 }
 
 .toggle{
@@ -410,7 +410,7 @@ body{
 
 
 .social-col a:hover{
-    color: dimgray;
+    color: rgb(49, 49, 49);
     cursor: pointer;
 }
 
