--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ body{
     position: absolute;
     right: 0;
     width: 100%;
-    min-height: 100vh;
+    min-height: 100dvh;
     display: flex;
     z-index: 3;
     transition: 0.2s;
